--- a/index.html
+++ b/index.html
@@ -1,50 +1,72 @@
-
+<!DOCTYPE html>
 <html lang="en">
-	<head>
-	  <title>Hello!</title>
-	  <meta charset="utf-8">
-	  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	  <meta name="viewport" content="width=device-width, initial-scale=1">
-	</head>  
-	<body>
+<head>
+	<title>Trabalho html</title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>  
+<body>
 	<main>	
-	  <h1>My Profile</h1>
-	  <h2>Paragraph 1</h2>
-	  <p>
-	    Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-	    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an 
-	    unknown printer took a galley of type and scrambled it to make a type specimen book.
-	  </p>
-	  <details>
-		  <summary>Lista de nomes</summary>
-		  <p>Daniel</p>
-		  <p>Matheus</p>
-		  <p>lucas</p>
-		  <p>Gabriel</p>
-		  <p>Fernando</p>
-		  <p>Paola</p>
-	  </details>
-	  <h2>Paragraph 2</h2>
-	  <p>
-	    It has survived not only five centuries, but also the leap into electronic typesetting, remaining 
-	    essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing 
-	    Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including 
-	    versions of Lorem Ipsum.
-	  </p>
-	  <h2>Paragraph 3</h2>
-	  <p>
-	    It is a long established fact that a reader will be distracted by the readable content of a page when 
-	    looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of 
-	    letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop 
-	    publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' 
-	    will uncover many web sites still in their infancy.
-	  </p>
-	  <p>
-	    My favorite site is <a href="https://google.com">google</a>
-	  </p>
+		<h1>Meu Portifolio</h1>
+		<h2>Paragraph 1</h2>
+		<p>
+		<strong><em>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+		Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an 
+		unknown printer took a galley of type and scrambled it to make a type specimen book.
+		</strong></em>
+		</p>
+		<details>
+			<summary>Lista de nomes</summary>
+			<p>&#60Daniel&#62</p>
+			<p>&#60Matheus&#62</p>
+			<p>&#60lucas&#62</p>
+			<p>&#60Gabriel&#62</p>
+			<p>&#60Fernando&#62</p>
+			<p>&#60Paola&#62</p>
+		</details>
+		<h2>Paragraph 2</h2>
+		<p>
+		It has survived not only five centuries, but also the leap into electronic typesetting, remaining 
+		essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing 
+		Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including 
+		versions of Lorem Ipsum.
+		</p>
+
+		<hr>
+
+		<p>
+		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci,
+		veritatis fuga cum voluptate incidunt facilis ab vero optio quasi
+		voluptatibus est culpa enim ut modi, qui laudantium deserunt libero
+		placeat.
+		</p>
+		<ul>
+			<li>daniel</li>
+			<li>lucas</li>
+			<li>gabriela</li>
+		</ul>
+
+		<h2>Paragraph 3</h2>
+		<p>
+		It is a long established fact that a reader will be distracted by the readable content of a page when 
+		looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of 
+		letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop 
+		publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' 
+		will uncover many web sites still in their infancy.
+		</p>
+
+		<ol>
+			<li>daniel</li>
+			<li>paula</li>
+			<li>igor</li>
+		</ol>
+		<div>  
+		<p>
+		My favorite site is <a href="https://google.com">google</a>
+		</p>
+		</div>
 	</main>
-	  <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
-	  <script src="https://button.glitch.me/button.js"></script>
-	</body>
-      </html>
+</body>
+</html>
       
