--- a/index.html
+++ b/index.html
@@ -62,9 +62,10 @@
 			<li>igor</li>
 		</ol>
 		<div>  
-		<p>
-		My favorite site is <a href="https://google.com">google</a>
-		</p>
+			<p>
+			My favorite site is <a href="https://google.com">google</a>
+			<img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fmidiapaulistana.com.br%2Fwp-content%2Fuploads%2F2021%2F04%2Flamen-sp.jpg&imgrefurl=https%3A%2F%2Fmidiapaulistana.com.br%2Flamen-em-sp%2F&tbnid=ZFoj9Za5JmX2cM&vet=12ahUKEwiQ4-Tp5qnxAhXtpZUCHWKFARkQMygNegUIARCEAg..i&docid=1efIQWq_NWNDeM&w=696&h=464&q=lamen&ved=2ahUKEwiQ4-Tp5qnxAhXtpZUCHWKFARkQMygNegUIARCEAg" alt="Foto de umas da Minha comidas favoritas.">
+			</p>
 		</div>
 	</main>
 </body>
