--- a/index.html
+++ b/index.html
@@ -25,22 +25,24 @@
 			<p>&#60Fernando&#62</p>
 			<p>&#60Paola&#62</p>
 		</details>
-		<h2>Paragraph 2</h2>
-		<p>
-		It has survived not only five centuries, but also the leap into electronic typesetting, remaining 
-		essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing 
-		Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including 
-		versions of Lorem Ipsum.
-		</p>
+		<section>
+			<h2>Paragraph 2</h2>
+			<p>
+			It has survived not only five centuries, but also the leap into electronic typesetting, remaining 
+			essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing 
+			Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including 
+			versions of Lorem Ipsum.
+			</p>
 
-		<hr>
+			<hr>
 
-		<p>
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci,
-		veritatis fuga cum voluptate incidunt facilis ab vero optio quasi
-		voluptatibus est culpa enim ut modi, qui laudantium deserunt libero
-		placeat.
-		</p>
+			<p>
+			Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci,
+			veritatis fuga cum voluptate incidunt facilis ab vero optio quasi
+			voluptatibus est culpa enim ut modi, qui laudantium deserunt libero
+			placeat.
+			</p>
+		</section>
 		<ul>
 			<li>daniel</li>
 			<li>lucas</li>
@@ -64,10 +66,9 @@
 		<div>  
 			<p>
 			My favorite site is <a href="https://google.com">google</a>
-			<img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fmidiapaulistana.com.br%2Fwp-content%2Fuploads%2F2021%2F04%2Flamen-sp.jpg&imgrefurl=https%3A%2F%2Fmidiapaulistana.com.br%2Flamen-em-sp%2F&tbnid=ZFoj9Za5JmX2cM&vet=12ahUKEwiQ4-Tp5qnxAhXtpZUCHWKFARkQMygNegUIARCEAg..i&docid=1efIQWq_NWNDeM&w=696&h=464&q=lamen&ved=2ahUKEwiQ4-Tp5qnxAhXtpZUCHWKFARkQMygNegUIARCEAg" alt="Foto de umas da Minha comidas favoritas.">
+			<img src="carneDePanela.jpeg" alt="Foto de umas da Minha comidas favoritas.">
 			</p>
 		</div>
 	</main>
 </body>
-</html>
-      
+</html> 
