--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		<div>  
 			<p>
 			My favorite site is <a href="https://google.com">google</a>
-			<img src="carneDePanela.jpeg" alt="Foto de umas da Minha comidas favoritas.">
+				<img src="img/carneDePanela.jpeg" alt="Hamburgue de carne de panela">
 			</p>
 		</div>
 	</main>
